Corrige .render.yaml pour déploiement static

--- a/.render.yaml
+++ b/.render.yaml
@@ -1,5 +1,5 @@
-services: 
-"  - type: web" 
-"    name: flutter-web" 
-"    env: static" 
-"    staticPublishPath: build/web" 
+services:
+  - type: web
+    name: flutter-web
+    env: static
+    staticPublishPath: build/web
